# zotero-arxiv-daily-a-fork

./: .pre-commit-config.yaml  README.md  construct_email.py  llm.py  main.py  paper.py  pyproject.toml  recommender.py
.github/workflows/: main.yml  test.yml
