[project]
name = "zotero-arxiv-daily"
version = "0.3.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.3",
    "loguru>=0.7.2",
    "pyzotero>=1.5.25",
    "scikit-learn>=1.5.2",
    "sentence-transformers>=3.3.1",
    "gitignore-parser>=0.1.11",
    "python-dotenv>=1.0.1",
    "feedparser>=6.0.11",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length=120

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",  # isort
]
